# mouser-api

./: .gitignore  LICENSE  README.md  mouser_cli.py  pyproject.toml  run_tests.py  setup.cfg
.github/workflows/: tests.yaml
mouser/: api.py  base.py  cli.py
tests/: test_mouser.py
