[tool.poetry]
name = "mouser"
version = "0.1.5"
description = "Mouser Python API"
authors = ["eeintech <eeintech@eeinte.ch>"]
maintainers = ["eeintech <eeintech@eeinte.ch>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sparkmicro/mouser-api"
repository = "https://github.com/sparkmicro/mouser-api"
keywords = ["mouser", "api", "python"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"
requests = "^2.31"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.poetry.scripts]
mouser = 'mouser.cli:mouser_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
